testsuite/tests/explicit-dicts/should_fail/Roles6.stderr

Roles6.hs:10:6: error:
    • Explicit dictionary application not allowed
    • In the expression:
        (undefined :: Ord Int => Int -> [Int] -> [Int])
          ((reverseOrd @Int :: Ord Int))
      In an equation for ‘f6’:
          f6
            = (undefined :: Ord Int => Int -> [Int] -> [Int])
                ((reverseOrd @Int :: Ord Int))
